--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "latest",
+    "dotenv": "^17.0.1",
     "embla-carousel-react": "8.5.1",
     "firebase": "^11.10.0",
     "firebase-admin": "^13.4.0",
